fix: Align checkbox and label using flexbox

--- a/src/components/Forms/_checkbox.scss
+++ b/src/components/Forms/_checkbox.scss
@@ -1,6 +1,9 @@
 @import '/src/sass/base/_colors';
 
 .custom-checkbox {
+  display: flex;
+  gap: 0.5em; // Kisebb térköz a checkbox és a szöveg között
+
   input[type='checkbox'] {
     -webkit-appearance: none;
     appearance: none;
